started LogInActivity.kt design

--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -48,7 +48,10 @@
                 android:text="Enter your name here"
                 android:textSize="17sp"/>
 
-
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="20dp"/>
             
         </LinearLayout>
 
