--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:app="http://schemas.android.com/apk/res-auto"
+<menu
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <group android:checkableBehavior="single">
-        <item android:title="Account" />
+     <item android:title="Account" />
         <item android:title="Main">
             <menu>
                 <item
@@ -16,5 +15,4 @@
                     android:icon="@drawable/ic_note_add" />
             </menu>
         </item>
-    </group>
 </menu>
