have to fix bug with toolbar

--- a/app/src/main/res/drawable/activity_bg.xml
+++ b/app/src/main/res/drawable/activity_bg.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:startColor="@color/purple_200"
-        android:endColor="@color/purple_700"
+        android:startColor="@color/PerfectlyPale"
+        android:endColor="@color/Basil"
         android:angle="45"/>
 </shape>
