--- a/app/src/main/res/drawable/custom_button.xml
+++ b/app/src/main/res/drawable/custom_button.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <gradient
-        android:startColor="@color/purple_200"
-        android:endColor="@color/purple_700"
+        android:startColor="@color/PerfectlyPale"
+        android:endColor="@color/Basil"
         android:angle="45"/>
     <corners
         android:radius="10dp"/>
