--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -2,17 +2,19 @@
 <menu
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-     <item android:title="Account" />
+    <group android:checkableBehavior="single">
+        <item android:title="Account" />
         <item android:title="Main">
             <menu>
                 <item
-                    android:id="@+id/menuHomeFragment"
+                    android:id="@id/homeFragment"
                     android:title="Home"
                     android:icon="@drawable/ic_home"/>
                 <item
-                    android:id="@+id/menuNoteFragment"
+                    android:id="@id/noteFragment"
                     android:title="Make note"
                     android:icon="@drawable/ic_note_add" />
             </menu>
         </item>
+    </group>
 </menu>
