--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -9,18 +9,10 @@
         android:id="@+id/homeFragment"
         android:name="com.example.todolistapp.home.HomeFragment"
         android:label="fragment_home"
-        tools:layout="@layout/fragment_home" >
-        <action
-            android:id="@+id/action_homeFragment_to_noteFragment"
-            app:destination="@id/noteFragment" />
-    </fragment>
+        tools:layout="@layout/fragment_home" />
     <fragment
         android:id="@+id/noteFragment"
         android:name="com.example.todolistapp.note.NoteFragment"
         android:label="fragment_note"
-        tools:layout="@layout/fragment_note" >
-        <action
-            android:id="@+id/action_noteFragment_to_homeFragment"
-            app:destination="@id/homeFragment" />
-    </fragment>
+        tools:layout="@layout/fragment_note" />
 </navigation>
