--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.TodoListApp" parent="Theme.AppCompat.DayNight.DarkActionBar">
+    <style name="Theme.TodoListApp" parent="ThemeOverlay.AppCompat.ActionBar">
         <!-- Primary brand color.
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -12,14 +12,14 @@
         &lt;!&ndash; Status bar color. &ndash;&gt;
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>-->
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/purple_700</item>
+        <item name="colorPrimary">@color/Basil</item>
         <item name="colorPrimaryDark">@color/black</item>
-        <item name="colorSecondary">@color/purple_200</item>
+        <item name="colorSecondary">@color/Droplet</item>
     </style>
 
-    <style name="NoActionBarThemeFullScreen" parent="Theme.MaterialComponents.Light.NoActionBar">
-        <item name="colorPrimary">@color/purple_700</item>
-        <item name="colorSecondary">@color/purple_200</item>
+    <style name="NoActionBarThemeFullScreen" parent="Theme.AppCompat.NoActionBar">
+        <item name="colorPrimary">@color/Basil</item>
+        <item name="colorSecondary">@color/Droplet</item>
         <item name="colorPrimaryDark">@color/black</item>
         <item name="android:windowActionBar">false</item>
         <item name="android:windowFullscreen">true</item>
