--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -8,11 +8,11 @@
     <fragment
         android:id="@+id/homeFragment"
         android:name="com.example.todolistapp.home.HomeFragment"
-        android:label="fragment_home"
+        android:label="Home"
         tools:layout="@layout/fragment_home" />
     <fragment
         android:id="@+id/noteFragment"
         android:name="com.example.todolistapp.note.NoteFragment"
-        android:label="fragment_note"
+        android:label="Notes"
         tools:layout="@layout/fragment_note" />
 </navigation>
